fixed issue with button overlapping second div

--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body, html {
 
 
 .button {
-    min-width: 200px;
+    min-width: 175px;
     margin: 2em;
     padding: 0.3em;
     border: 2px solid #15f4ee;
@@ -47,7 +47,7 @@ body, html {
     cursor: pointer;
     text-transform: uppercase;
     color:  rgb(155, 153, 153);
-    letter-spacing: 10px;
+    letter-spacing: 7px;
     font-weight: bold;
 }
 
@@ -127,18 +127,20 @@ body, html {
     color: #fff;
     letter-spacing: 8px;
     text-transform: uppercase;
+    
 
 }
 
 @media(max-width:768px) {
 
     .ptext {
-        top: 40%;
+        top: 25%;
     }
 
 
     .header {
-        font-size: 70px
+        font-size: 70px;
+        line-height: 60px;
     }
 
 }
@@ -151,13 +153,19 @@ body, html {
 
     .ptext {
         top: 25%;
+        height: 100%;
     }
-
 
     .header {
         line-height: 80px;
         font-size: 80px
     }
 
+}
 
+@media(max-height:319px) {
+
+    .pimg1 {
+        height:350px;
+    }
 }
